--- a/WebButik/Content/Site.css
+++ b/WebButik/Content/Site.css
@@ -1,6 +1,8 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color:skyblue;
+
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -21,4 +23,12 @@ input,
 select,
 textarea {
     max-width: 280px;
+    
+}
+
+footer {
+
+    background-color:yellow;
+    text-decoration-color: midnightblue;
+
 }
