--- a/WebButik/Views/Shared/_Layout.cshtml
+++ b/WebButik/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Jack&Jones", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("H&M", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -29,11 +29,31 @@
             </div>
         </div>
     </div>
+
+  
+
     <div class="container body-content">
         @RenderBody()
+
+        <div>
+            @if (User.IsInRole("Admin"))
+            {
+                Html.RenderAction("AdminView", "Admin");
+            }
+
+        </div>
+
+        <div>
+            @if (User.IsInRole("User"))
+            {
+                Html.RenderAction("CustomerView", "Customer");
+            }
+
+        </div>
+
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - H&M:s affärskoncept går ut på att erbjuda mode och kvalitet till bästa pris på ett hållbart sätt. Sedan H&M grundades 1947 har det vuxit och blivit ett av världens ledande modeföretag. Innehållet på denna webbplats är upphovsrättsskyddat och tillhör H & M Hennes & Mauritz AB.</p>
         </footer>
     </div>
 
