--- a/WebButik/Views/Admin/_productList.cshtml
+++ b/WebButik/Views/Admin/_productList.cshtml
@@ -1,31 +1,14 @@
 ﻿@model IEnumerable<WebButik.Models.Product>
 
-@*<p>
-    @Html.ActionLink("Create New", "Create", "Admin")
-</p>*@
-
-<div class="row">
-
-    <div class="col-md-2"> </div>
-    <div class="col-md-2"> </div>
-    <div class="col-md-2"> </div>
-
-    <div class="col-md-2">@Html.ActionLink("Create Product", "Create", "Admin")</div>
-    <div class="col-md-2">@Html.ActionLink("Product List", "ProductList", "Admin")</div>
-    <div class="col-md-2">@Html.ActionLink("Customer List", "CustomerList", "Admin")</div>
-
-
-</div>
-
-
-
-@*<table class="table">
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.ProductName)
         </th>
         <th></th>
-
     </tr>
 
 @foreach (var item in Model) {
@@ -41,4 +24,4 @@
     </tr>
 }
 
-</table>*@
+</table>
