--- a/WebButik/Views/Home/Index.cshtml
+++ b/WebButik/Views/Home/Index.cshtml
@@ -16,11 +16,10 @@
 
 <div class="row">
 
-    <div class="col-md-2">@Html.ActionLink("Men", "ProductList", "Admin")</div>
-    <div class="col-md-2">@Html.ActionLink("Women", "ProductList", "Admin")</div>
-    <div class="col-md-2">@Html.ActionLink("Children", "ProductList", "Admin")</div>
+    <div class="col-md-2">@Html.ActionLink("Men", "MenProduct", "Admin")</div>
+    <div class="col-md-2">@Html.ActionLink("Women", "WomeProduct", "Admin")</div>
+    <div class="col-md-2">@Html.ActionLink("Children", "ChildrenProduct", "Admin")</div>
 
- 
 </div>
 
 @*<div class="row">
