--- a/WebButik/Views/Admin/_productList.cshtml
+++ b/WebButik/Views/Admin/_productList.cshtml
@@ -4,24 +4,46 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ProductName)
-        </th>
-        <th></th>
-    </tr>
+   
+        <tr>
+            <th class="col-md-3">
+                @Html.DisplayNameFor(model => model.ProductName)
+            </th>
+            <th class="col-md-3">
+                @Html.DisplayNameFor(model => model.ProductType)
+            </th>
+            <th class="col-md-3">
+                @Html.DisplayNameFor(model => model.ProductPrice)
+            </th>
+            <th class="col-md-3">
+                @Html.DisplayNameFor(model => model.ProductSize)
+            </th>
+            <th></th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ProductName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ProductId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ProductId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ProductId })
-        </td>
-    </tr>
+
+        @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProductName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProductType)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProductPrice)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProductSize)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.ProductId }) |
+                @Html.ActionLink("Details", "Details", new { id = item.ProductId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.ProductId })
+            </td>
+        </tr>
 }
+   
 
 </table>
