--- a/WebButik/Views/Home/Index.cshtml
+++ b/WebButik/Views/Home/Index.cshtml
@@ -14,22 +14,58 @@
 
 </div>
 
-<div class="row">
 
-    <div class="col-md-2">@Html.ActionLink("Men", "MenProduct", "Admin")</div>
+@*<div class="container">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
 
-    <div class="col-md-2">@Html.ActionLink("Women", "WomeProduct", "Admin")</div>
-    <div class="col-md-2">@Html.ActionLink("Children", "ChildrenProduct", "Admin")</div>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="~/Content/img/pexels-photo-804899.jpeg">
+            </div>
 
-</div>
+            <div class="item">
+                <img src="~/Content/img/pexels-photo-804899.jpeg">
+            </div>
 
-@*<div class="row">
-    <div class="col-md-2"><p> Men </p></div>
-    <div class="col-md-2"><p>Women</p></div>
-    <div class="col-md-2"><p>Children</p></div>
+            <div class="item">
+                <img src="~/Content/img/pexels-photo-413727.jpeg">
+            </div>
+        </div>
 
-    <div class="col-md-2"> </div>
-    <div class="col-md-2"> </div>
-    <div class="col-md-2"> </div>
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    </div>*@
 
-</div>*@
+    <div class="row">
+        <div class="col-md-2">@Html.ActionLink("Men", "MenProduct", "Admin")</div>
+        <div class="col-md-2">@Html.ActionLink("Women", "WomeProduct", "Admin")</div>
+        <div class="col-md-2">@Html.ActionLink("Children", "ChildrenProduct", "Admin")</div>
+    </div>
+
+
+
+    @*<div class="row">
+            <div class="col-md-2"><p> Men </p></div>
+            <div class="col-md-2"><p>Women</p></div>
+            <div class="col-md-2"><p>Children</p></div>
+
+            <div class="col-md-2"> </div>
+            <div class="col-md-2"> </div>
+            <div class="col-md-2"> </div>
+
+        </div>*@
