--- a/WebButik/Views/Admin/MenProduct.cshtml
+++ b/WebButik/Views/Admin/MenProduct.cshtml
@@ -42,7 +42,7 @@
         </td>
         <td>
            @* @Html.ActionLink("Edit", "Edit", new { id = item.ProductId }) |*@
-            @Html.ActionLink("AddToCart", "Cart", new { id = item.ProductId }) |
+            @Html.ActionLink("AddToCart", "AddCart", "Customer", new { id = item.ProductId }) |
           @*  @Html.ActionLink("Delete", "Delete", new { id = item.ProductId })*@
         </td>
 
