--- a/WebButik/Views/Home/Index.cshtml
+++ b/WebButik/Views/Home/Index.cshtml
@@ -53,7 +53,7 @@
 
     <div class="row">
         <div class="col-md-2">@Html.ActionLink("Men", "MenProduct", "Admin")</div>
-        <div class="col-md-2">@Html.ActionLink("Women", "WomeProduct", "Admin")</div>
+        <div class="col-md-2">@Html.ActionLink("Women", "WomenProduct", "Admin")</div>
         <div class="col-md-2">@Html.ActionLink("Children", "ChildrenProduct", "Admin")</div>
     </div>
 
