--- a/WebButik/Views/Admin/MenProduct.cshtml
+++ b/WebButik/Views/Admin/MenProduct.cshtml
@@ -43,7 +43,7 @@
         </td>
         <td>
            @* @Html.ActionLink("Edit", "Edit", new { id = item.ProductId }) |*@
-            @Html.ActionLink("AddToCart", "AddCart", "Customer", new { id = item.ProductId }) |
+            @Html.ActionLink("AddToCart", "AddCart", "Customer", new { id = item.ProductId }, null) |
           @*  @Html.ActionLink("Delete", "Delete", new { id = item.ProductId })*@
         </td>
 
